@@ -196,7 +196,7 @@ tests/DCPS/SharedTransport/run_test.pl: !DCPS_MIN
 tests/DCPS/SharedTransport/run_test.pl udp: !DCPS_MIN
 tests/DCPS/SharedTransport/run_test.pl multicast: !DCPS_MIN
 tests/DCPS/Ownership/run_test.pl: !DCPS_MIN
-tests/DCPS/Ownership/run_test.pl update_strength: !DCPS_MIN
+tests/DCPS/Ownership/run_test.pl update_strength: !DCPS_MIN !NO_BUILT_IN_TOPICS
 tests/DCPS/Ownership/run_test.pl liveliness_change: !DCPS_MIN
 tests/DCPS/Ownership/run_test.pl miss_deadline: !DCPS_MIN
 tests/DCPS/GroupPresentation/run_test.pl: !DCPS_MIN
